--- a/index - コピー.html
+++ b/index - コピー.html
@@ -18,7 +18,7 @@
   <meta content="https://ryuzanmix.github.io/" property="og:url"/>
   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="og:title"/>
   <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="og:description"/>
-  <meta cFontent="https://ryuzanmix.github.io/og-image.png" property="og:image"/>
+  <meta content="https://ryuzanmix.github.io/og-image.png" property="og:image"/>
   <meta content="summary_large_image" property="twitter:card"/>
   <meta content="https://ryuzanmix.github.io/" property="twitter:url"/>
   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="twitter:title"/>
@@ -441,7 +441,6 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
    <h2 class="section-title">
     🛠 料金とご依頼の流れ
    </h2>
-※こちらの料金は、Xでのお取引の価格となります。
    <table class="price-table">
     <thead>
      <tr>
@@ -553,7 +552,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     📩 ご相談・ご依頼方法
    </h3>
    <p>
-    ・ページ下部の、XのDM・ココナラ・SKIMAリンクからお気軽にご連絡ください
+    ・XのDM、またはメール（ryuzan.mix@gmail.com）でお気軽にご連絡ください
 ・内容確認・サンプル提出後、お見積もりをお送りします
 ・ご納得後、制作スタート（通常納期：2〜3週間）
     <br/>
@@ -732,21 +731,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       ryuzan.mix@gmail.com
      </a>
     </p>
-
-
     <button class="cta" onclick="window.open('https://x.com/ryuzanmix','_blank')">
-     XのDMで相談する
+     DMで相談する
     </button>
-
-    <button class="cta" onclick="window.open('https://coconala.com/services/2323053','_blank')">
-     coconalaで相談する
-    </button>
-
-    <button class="cta" onclick="window.open('https://skima.jp/item/detail?item_id=239311','_blank')">
-      SKIMAで相談する
-    </button>
-
-
    </div>
   </section>
   <footer>
