--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     💬 よくあるご依頼例
    </h3>
    <p>
-    ・フルコーラス MIX（￥5,000）＋動画エンコード（￥1,000）＝￥6,000
-・ワンコーラス MIX（￥3,000）＋ピッチ補正なし（▲￥1,000）＝￥2,000
+・フルコーラス MIX（￥5,000）＋動画エンコード（￥1,000）＝￥6,000<br>
+・ワンコーラス MIX（￥3,000）＋ピッチ補正なし（▲￥1,000）＝￥2,000<br>
 ・コラボ対応＋エンコードまで含めて：￥8,000目安
    </p>
    <br/>
@@ -553,10 +553,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     📩 ご相談・ご依頼方法
    </h3>
    <p>
-    ・ページ下部の、XのDM・ココナラ・SKIMAリンクからお気軽にご連絡ください
-・内容確認・サンプル提出後、お見積もりをお送りします
+・ページ下部の、XのDM・ココナラ・SKIMAリンクからお気軽にご連絡ください<br>
+・内容確認後、お見積もりをお送りします<br>
 ・ご納得後、制作スタート（通常納期：2〜3週間）
-    <br/>
    </p>
   </section>
   <section id="message">
@@ -758,9 +757,6 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
    </p>
    <p>
     運営：Ryuzan Mix Salon（個人運営）
-   </p>
-   <p>
-    所在地：日本
    </p>
    <p>
     &copy; 2025 Ryuzan Mix Salon
