--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>
    【歌ってみたMIX専門】Ryuzan Mix Salon｜VTuber・歌い手さん向け高品質MIX
   </title>
-  <meta content="VTuber・歌い手向け！Ryuzan Mix Salonは、プロ品質の歌ってみたMIX・動画エンコードを低価格で提供。豊富な実績・丁寧対応・明確な価格で、初めての方も安心してご依頼いただけます。" name="description"/>
+ <meta name="description" content="録音ミス・音痴・初心者も大歓迎！“やさしい歌声トリートメント”で、安心して依頼できるMIX＆エンコード専門サロンです。">
   <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様" name="keywords"/>
   <link href="favicon256.png" rel="icon" sizes="32x32" type="image/png"/>
   <link href="favicon256.png" rel="icon" sizes="192x192" type="image/png"/>
@@ -18,7 +18,9 @@
   <meta content="https://ryuzanmix.github.io/" property="og:url"/>
   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="og:title"/>
   <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="og:description"/>
-  <meta cFontent="https://ryuzanmix.github.io/og-image.png" property="og:image"/>
+<meta property="og:image" content="https://ryuzanmix.github.io/og-image.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://ryuzanmix.github.io/og-image.png" />
   <meta content="summary_large_image" property="twitter:card"/>
   <meta content="https://ryuzanmix.github.io/" property="twitter:url"/>
   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="twitter:title"/>
@@ -246,6 +248,13 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       <h3>
        50曲以上の仕上がりをYouTubeで公開中！
       </h3>
+      <div style="text-align:center; margin-bottom: 10px;">
+  <a href="https://www.youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" 
+     target="_blank" 
+     style="display:inline-block; background-color:#b28fdd; color:#fff; padding:10px 20px; border-radius:24px; text-decoration:none; font-weight:600;">
+    🎧 YouTube - MIXサンプルプレイリスト
+  </a>
+</div>
       <div class="playlist-wrapper">
        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" loading="lazy" src="https://www.youtube.com/embed/videoseries?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9&amp;rel=0" title="YouTube video playlist" width="560">
        </iframe>
@@ -261,7 +270,10 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       </div>
      </section>
     </div>
-   </div>
+<p style="font-size: 1rem; color: var(--text-light); margin-top: 16px;">
+「MIXってなにから頼めばいいの？」「自分の声に自信がない…」そんな方の“はじめの一歩”を、丁寧にサポートします☺
+</p>
+  </div>
   </header>
   <style>
    .about-section {
@@ -374,6 +386,26 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     </p>
    </div>
   </div>
+
+  <section id="reviews">
+    <br>
+  <h2 class="section-title">💬 ご依頼者様の声</h2>
+  <div class="cards">
+    <article class="card">
+      <h3>「パーフェクトです！」</h3>
+      <p>対応やクオリティ全てにおいて完璧でした！</p>
+    </article>
+    <article class="card">
+      <h3>「希望通りの仕上がり」</h3>
+      <p>何度も丁寧に修正していただき、安心して依頼できました！</p>
+    </article>
+    <article class="card">
+      <h3>「MIX初心者でも安心」</h3>
+      <p>録音や動画のことも教えていただき、初めてでも迷わず依頼できました。</p>
+    </article>
+  </div>
+</section>
+
   <section id="reasons">
    <br/>
    <h2 class="section-title">
@@ -441,7 +473,6 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
    <h2 class="section-title">
     🛠 料金とご依頼の流れ
    </h2>
-※こちらの料金は、Xでのお取引の価格となります。
    <table class="price-table">
     <thead>
      <tr>
@@ -539,6 +570,11 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     </strong>
     ：いつでも500円引き
    </p>
+
+<p style="font-size: 0.95rem; color: var(--text-light); margin-top: 8px;">
+※ココナラ・SKIMA経由ではサービス手数料が加算されるため、表示価格が異なります。X（DM）からのご依頼では、通常価格（フルコーラス MIX：5,000円）でご案内しています。
+</p>
+
    <br/>
    <h3>
     💬 よくあるご依頼例
