--- a/index_.html
+++ b/index_.html
@@ -6,30 +6,30 @@
   <title>
    【歌ってみたMIX専門】Ryuzan Mix Salon｜VTuber・歌い手さん向け高品質MIX
   </title>
-  <meta content="録音ミス・音痴・初心者も大歓迎！“やさしい歌声トリートメント”で、安心して依頼できるMIX＆エンコード専門サロンです。" name="description"/>
-  <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様" name="keywords">
-   <link href="favicon256.png" rel="icon" sizes="32x32" type="image/png"/>
-   <link href="favicon256.png" rel="icon" sizes="192x192" type="image/png"/>
-   <link href="favicon256.png" rel="apple-touch-icon"/>
-   <link href="https://ryuzanmix.github.io/" rel="canonical"/>
-   <meta content="index,follow" name="robots"/>
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
-   <meta content="website" property="og:type"/>
-   <meta content="https://ryuzanmix.github.io/" property="og:url"/>
-   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="og:title"/>
-   <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="og:description"/>
-   <meta content="https://ryuzanmix.github.io/og-image.png" property="og:image"/>
-   <meta content="summary_large_image" name="twitter:card"/>
-   <meta content="https://ryuzanmix.github.io/og-image.png" name="twitter:image"/>
-   <meta content="summary_large_image" property="twitter:card"/>
-   <meta content="https://ryuzanmix.github.io/" property="twitter:url"/>
-   <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="twitter:title"/>
-   <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="twitter:description"/>
-   <meta content="https://ryuzanmix.github.io/og-image.png" property="twitter:image"/>
-   <link href="https://fonts.googleapis.com/" rel="preconnect"/>
-   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&amp;family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
-   <style>
-    :root{
+ <meta name="description" content="録音ミス・音痴・初心者も大歓迎！“やさしい歌声トリートメント”で、安心して依頼できるMIX＆エンコード専門サロンです。">
+  <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様" name="keywords"/>
+  <link href="favicon256.png" rel="icon" sizes="32x32" type="image/png"/>
+  <link href="favicon256.png" rel="icon" sizes="192x192" type="image/png"/>
+  <link href="favicon256.png" rel="apple-touch-icon"/>
+  <link href="https://ryuzanmix.github.io/" rel="canonical"/>
+  <meta content="index,follow" name="robots"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+  <meta content="website" property="og:type"/>
+  <meta content="https://ryuzanmix.github.io/" property="og:url"/>
+  <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="og:title"/>
+  <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="og:description"/>
+<meta property="og:image" content="https://ryuzanmix.github.io/og-image.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://ryuzanmix.github.io/og-image.png" />
+  <meta content="summary_large_image" property="twitter:card"/>
+  <meta content="https://ryuzanmix.github.io/" property="twitter:url"/>
+  <meta content="Ryuzan Mix Salon | 歌ってみたMIXサロン" property="twitter:title"/>
+  <meta content="歌声をもっと可愛く、艶やかに。分かりやすい価格と豊富な実績で安心のボーカルMIXサービス。" property="twitter:description"/>
+  <meta content="https://ryuzanmix.github.io/og-image.png" property="twitter:image"/>
+  <link href="https://fonts.googleapis.com/" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&amp;family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <style>
+   :root{
   --accent:#b28fdd;
   --accent-dark:#9f79d2;
   --bg:#fdfafc;
@@ -192,9 +192,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
 #pricing h2.section-title {
   margin-top: 20px;
 }
-   </style>
-   <script type="application/ld+json">
-    {
+  </style>
+  <script type="application/ld+json">
+   {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Ryuzan Mix Salon",
@@ -210,8 +210,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     "email": "ryuzan.mix@gmail.com"
   }
 }
-   </script>
-  </meta>
+  </script>
  </head>
  <body>
   <header class="hero">
@@ -222,7 +221,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       Ryuzan Mix Salon
      </h1>
      <p class="tagline">
-      “歌声トリートメント” 専門の
+      &ldquo;歌声トリートメント&rdquo; 専門の
       <br/>
       ボーカルMIX &amp; エンコードサロン
      </p>
@@ -250,10 +249,12 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
        50曲以上の仕上がりをYouTubeで公開中！
       </h3>
       <div style="text-align:center; margin-bottom: 10px;">
-       <a href="https://www.youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" style="display:inline-block; background-color:#b28fdd; color:#fff; padding:10px 20px; border-radius:24px; text-decoration:none; font-weight:600;" target="_blank">
-        🎧 YouTube - MIXサンプルプレイリスト
-       </a>
-      </div>
+  <a href="https://www.youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" 
+     target="_blank" 
+     style="display:inline-block; background-color:#b28fdd; color:#fff; padding:10px 20px; border-radius:24px; text-decoration:none; font-weight:600;">
+    🎧 YouTube - MIXサンプルプレイリスト
+  </a>
+</div>
       <div class="playlist-wrapper">
        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" loading="lazy" src="https://www.youtube.com/embed/videoseries?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9&amp;rel=0" title="YouTube video playlist" width="560">
        </iframe>
@@ -269,10 +270,10 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       </div>
      </section>
     </div>
-    <p style="font-size: 1rem; color: var(--text-light); margin-top: 16px;">
-     「MIXってなにから頼めばいいの？」「自分の声に自信がない…」そんな方の“はじめの一歩”を、丁寧にサポートします☺
-    </p>
-   </div>
+<p style="font-size: 1rem; color: var(--text-light); margin-top: 16px;">
+「MIXってなにから頼めばいいの？」「自分の声に自信がない…」そんな方の“はじめの一歩”を、丁寧にサポートします☺
+</p>
+  </div>
   </header>
   <style>
    .about-section {
@@ -360,7 +361,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
      🎧 竜山つむぎについて
     </h2>
     <p>
-     やさしさで“声”を整える、歌声トリートメント専門のMIX師です。
+     やさしさで&ldquo;声&rdquo;を整える、歌声トリートメント専門のMIX師です。
      <br/>
      「録音ミスがある」「リズムやピッチに自信がない」そんな不安も、まるごと大丈夫。
      <br/>
@@ -385,100 +386,87 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     </p>
    </div>
   </div>
+
   <section id="reviews">
+    <br>
+  <h2 class="section-title">💬 ご依頼者様の声</h2>
+  <div class="cards">
+    <article class="card">
+      <h3>「パーフェクトです！」</h3>
+      <p>対応やクオリティ全てにおいて完璧でした！</p>
+    </article>
+    <article class="card">
+      <h3>「希望通りの仕上がり」</h3>
+      <p>何度も丁寧に修正していただき、安心して依頼できました！</p>
+    </article>
+    <article class="card">
+      <h3>「MIX初心者でも安心」</h3>
+      <p>録音や動画のことも教えていただき、初めてでも迷わず依頼できました。</p>
+    </article>
+  </div>
+</section>
+
+  <section id="reasons">
    <br/>
    <h2 class="section-title">
-    💬 ご依頼者様の声
+    選ばれる 5 つの理由
    </h2>
    <div class="cards">
     <article class="card">
      <h3>
-      「パーフェクトです！」
+      <i class="fa-solid fa-tags" style="color: #2e8b57; font-size: 1.3em; vertical-align: middle;">
+      </i>
+      料金が明確で安心
      </h3>
      <p>
-      対応やクオリティ全てにおいて完璧でした！
+      税込み固定価格で予算オーバーの心配なし。オプションもお見積り時に必ず提示します。
      </p>
     </article>
     <article class="card">
      <h3>
-      「希望通りの仕上がり」
+      <i class="fa-solid fa-comments" style="color: #c39bd3; font-size: 1.3em; vertical-align: middle;">
+      </i>
+      やさしいコミュニケーション
      </h3>
      <p>
-      何度も丁寧に修正していただき、安心して依頼できました！
+      DM は
+      <strong>
+       24 時間以内
+      </strong>
+      に返信。敬語＋絵文字で初心者さんにも安心感を。
      </p>
     </article>
     <article class="card">
      <h3>
-      「MIX初心者でも安心」
+      <i class="fa-solid fa-music" style="color: #3498db; font-size: 1.3em; vertical-align: middle;">
+      </i>
+      豊富な実績とサンプル
      </h3>
      <p>
-      録音や動画のことも教えていただき、初めてでも迷わず依頼できました。
+      50 曲超のサンプルをプレイリストで公開。仕上がりを耳で確認できます。
+     </p>
+    </article>
+    <article class="card">
+     <h3>
+      <i class="fa-solid fa-clock" style="color: #34495e; font-size: 1.3em; vertical-align: middle;">
+      </i>
+      明確な納期＆修正
+     </h3>
+     <p>
+      通常納期 2〜3 週間／無料修正 2 回。進捗はスクショ付きで共有します。
+     </p>
+    </article>
+    <article class="card">
+     <h3>
+      <i class="fa-solid fa-gem" style="color: #8e44ad; font-size: 1.3em; vertical-align: middle;">
+      </i>
+      コスパ抜群の高品質
+     </h3>
+     <p>
+      有料プラグイン多数使用。お手頃価格で艶やかに仕上げます。
      </p>
     </article>
    </div>
-  </section>
-  <section id="reasons">
-   <br>
-    <h2 class="section-title">
-     選ばれる 5 つの理由
-    </h2>
-    <div class="cards">
-     <article class="card">
-      <h3>
-       <i class="fa-solid fa-tags" style="color: #2e8b57; font-size: 1.3em; vertical-align: middle;">
-       </i>
-       料金が明確で安心
-      </h3>
-      <p>
-       税込み固定価格で予算オーバーの心配なし。オプションもお見積り時に必ず提示します。
-      </p>
-     </article>
-     <article class="card">
-      <h3>
-       <i class="fa-solid fa-comments" style="color: #c39bd3; font-size: 1.3em; vertical-align: middle;">
-       </i>
-       やさしいコミュニケーション
-      </h3>
-      <p>
-       DM は
-       <strong>
-        24 時間以内
-       </strong>
-       に返信。敬語＋絵文字で初心者さんにも安心感を。
-      </p>
-     </article>
-     <article class="card">
-      <h3>
-       <i class="fa-solid fa-music" style="color: #3498db; font-size: 1.3em; vertical-align: middle;">
-       </i>
-       豊富な実績とサンプル
-      </h3>
-      <p>
-       50 曲超のサンプルをプレイリストで公開。仕上がりを耳で確認できます。
-      </p>
-     </article>
-     <article class="card">
-      <h3>
-       <i class="fa-solid fa-clock" style="color: #34495e; font-size: 1.3em; vertical-align: middle;">
-       </i>
-       明確な納期＆修正
-      </h3>
-      <p>
-       通常納期 2〜3 週間／無料修正 2 回。進捗はスクショ付きで共有します。
-      </p>
-     </article>
-     <article class="card">
-      <h3>
-       <i class="fa-solid fa-gem" style="color: #8e44ad; font-size: 1.3em; vertical-align: middle;">
-       </i>
-       コスパ抜群の高品質
-      </h3>
-      <p>
-       有料プラグイン多数使用。お手頃価格で艶やかに仕上げます。
-      </p>
-     </article>
-    </div>
-   </br>
   </section>
   <section id="pricing">
    <br/>
@@ -489,9 +477,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     <thead>
      <tr>
       <th>
-       <h3>
-        プラン
-       </h3>
+       <h3>プラン</h3>
       </th>
       <th>
        内容
@@ -575,9 +561,10 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
        手直しなしOKな方
       </td>
      </tr>
-     <tr>
+    <tr>
       <td data-label="プラン">
        🎁 リピーター割
+    </strong>
       </td>
       <td data-label="内容">
        2回目以降のご依頼料から、-￥500
@@ -589,47 +576,43 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
        気に入ってくださかった割引です✨
       </td>
      </tr>
+     
     </tbody>
    </table>
-   <p style="font-size: 0.95rem; color: var(--text-light); margin-top: 8px;">
-    ※ココナラ・SKIMA経由ではサービス手数料が加算されるため、表示価格が異なります。X（DM）からのご依頼では、通常価格（フルコーラス MIX：5,000円）でご案内しています。
-   </p>
+   
+<p style="font-size: 0.95rem; color: var(--text-light); margin-top: 8px;">
+※ココナラ・SKIMA経由ではサービス手数料が加算されるため、表示価格が異なります。X（DM）からのご依頼では、通常価格（フルコーラス MIX：5,000円）でご案内しています。
+</p>
+
    <br/>
    <h3>
     💬 よくあるご依頼例
    </h3>
    <p>
-    ・フルコーラス MIX（￥5,000）＋動画エンコード（￥1,000）＝￥6,000
-    <br/>
-    ・ワンコーラス MIX（￥3,000）＋ピッチ補正なし（▲￥1,000）＝￥2,000
-    <br/>
-    ・コラボ対応＋エンコードまで含めて：￥8,000目安
+・フルコーラス MIX（￥5,000）＋動画エンコード（￥1,000）＝￥6,000<br>
+・ワンコーラス MIX（￥3,000）＋ピッチ補正なし（▲￥1,000）＝￥2,000<br>
+・コラボ対応＋エンコードまで含めて：￥8,000目安
    </p>
-   <br>
-    <h3>
-     📩 ご相談・ご依頼方法
-    </h3>
-    <p>
-     ・ページ下部の、XのDM・ココナラ・SKIMAリンクからお気軽にご連絡ください
-     <br/>
-     ・内容確認後、お見積もりをお送りします
-     <br/>
-     ・ご納得後、制作スタート（通常納期：2〜3週間）
-    </p>
-   </br>
+   <br/>
+   <h3>
+    📩 ご相談・ご依頼方法
+   </h3>
+   <p>
+・ページ下部の、XのDM・ココナラ・SKIMAリンクからお気軽にご連絡ください<br>
+・内容確認後、お見積もりをお送りします<br>
+・ご納得後、制作スタート（通常納期：2〜3週間）
+   </p>
   </section>
   <section id="message">
    <h2>
     🧡 最後にひとこと
    </h2>
    <p>
-    「MIXを頼むのが初めてで不安…」
-    <br>
-     そんな方こそ、安心してご相談いただけたら嬉しいです。
-     <br>
-      あなたの歌声の魅力を、そっと引き出せますように。
-     </br>
-    </br>
+    「MIXを頼むのが初めてで不安&hellip;」
+    <br/>
+    そんな方こそ、安心してご相談いただけたら嬉しいです。
+    <br/>
+    あなたの歌声の魅力を、そっと引き出せますように。
    </p>
   </section>
   <section id="workflow">
@@ -658,42 +641,41 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       3
      </span>
      <p>
-      MIX → ご確認 → 後払い → 納品（mp3 / wav / mp4）
+      MIX &rarr; ご確認 &rarr; 後払い &rarr; 納品（mp3 / wav / mp4）
      </p>
     </div>
     <div class="workflow-step">
      <span>
-      ★
+      &starf;
      </span>
      <p>
       ご依頼の際は、こちらにご記入の上録音の音源とともにDMにてお送りください。
-      <br>
-       ※ご不明な項目がありましたら、ご記入は不要です。
-       <br/>
-       <br/>
-       ・楽曲名:
-       <br/>
-       ・オリジナル楽曲URL:
-       <br/>
-       ・キー変更:
-       <br/>
-       ・BPM:
-       <br/>
-       ・長さ:（フルコーラスorワンコーラス）
-       <br/>
-       ・トラック数:
-       <br/>
-       ・使用インターフェース名/マイク名：
-       <br/>
-       ・エンコード(有料): （有or無）
-       <br/>
-       ・お支払方法：（銀行振込、PayPay）
-       <br/>
-       ・納品は２～３週間前後になります。
-       <br/>
-       ・Mixに関するご要望:
-       <br/>
-      </br>
+      <br/>
+      ※ご不明な項目がありましたら、ご記入は不要です。
+      <br/>
+      <br/>
+      ・楽曲名:
+      <br/>
+      ・オリジナル楽曲URL:
+      <br/>
+      ・キー変更:
+      <br/>
+      ・BPM:
+      <br/>
+      ・長さ:（フルコーラスorワンコーラス）
+      <br/>
+      ・トラック数:
+      <br/>
+      ・使用インターフェース名/マイク名：
+      <br/>
+      ・エンコード(有料): （有or無）
+      <br/>
+      ・お支払方法：（銀行振込、PayPay）
+      <br/>
+      ・納品は２～３週間前後になります。
+      <br/>
+      ・Mixに関するご要望:
+      <br/>
      </p>
     </div>
     <p style="color: var(--text-light); font-size: 0.95rem;">
@@ -737,9 +719,9 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
         gigafile.nu
        </code>
       </a>
-      にファイルをドラッグ → 「URL をコピー」→ DM へ貼付。
+      にファイルをドラッグ &rarr; 「URL をコピー」&rarr; DM へ貼付。
       <br/>
-      スマホは「ファイルを選択」→ アップ後リンクを共有で OK。Wi-Fi 環境推奨です。
+      スマホは「ファイルを選択」&rarr; アップ後リンクを共有で OK。Wi-Fi 環境推奨です。
      </p>
     </details>
    </div>
@@ -749,7 +731,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       修正は何回まで？
      </summary>
      <p>
-      無料 2 回まで対応いたします。追加は 1 回 +¥1,000 ですが、多くのお客様が 1 回以内で完結しています。
+      無料 2 回まで対応いたします。追加は 1 回 +&yen;1,000 ですが、多くのお客様が 1 回以内で完結しています。
      </p>
     </details>
    </div>
@@ -794,15 +776,21 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
       ryuzan.mix@gmail.com
      </a>
     </p>
+
+
     <button class="cta" onclick="window.open('https://x.com/ryuzanmix','_blank')">
      XのDMで相談する
     </button>
+
     <button class="cta" onclick="window.open('https://coconala.com/services/2323053','_blank')">
      coconalaで相談する
     </button>
+
     <button class="cta" onclick="window.open('https://skima.jp/item/detail?item_id=239311','_blank')">
-     SKIMAで相談する
+      SKIMAで相談する
     </button>
+
+
    </div>
   </section>
   <footer>
@@ -816,7 +804,7 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     運営：Ryuzan Mix Salon（個人運営）
    </p>
    <p>
-    © 2025 Ryuzan Mix Salon
+    &copy; 2025 Ryuzan Mix Salon
    </p>
   </footer>
  </body>
