--- a/index.html
+++ b/index.html
@@ -632,76 +632,46 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     </br>
    </p>
   </section>
-  <section id="workflow">
-   <h2 class="section-title">
-    ご依頼フロー
-   </h2>
-   <div class="workflow">
-    <div class="workflow-step">
-     <span>
-      1
-     </span>
-     <p>
-      DM でご相談 &amp; お見積り（24 時間以内に返信）
-     </p>
-    </div>
-    <div class="workflow-step">
-     <span>
-      2
-     </span>
-     <p>
-      録音データ提出（GigaFile／Google Drive など）
-     </p>
-    </div>
-    <div class="workflow-step">
-     <span>
-      3
-     </span>
-     <p>
-      MIX → ご確認 → 後払い → 納品（mp3 / wav / mp4）
-     </p>
-    </div>
-    <div class="workflow-step">
-     <span>
-      ★
-     </span>
-     <p>
-      ご依頼の際は、こちらにご記入の上録音の音源とともにDMにてお送りください。
-      <br>
-       ※ご不明な項目がありましたら、ご記入は不要です。
-       <br/>
-       <br/>
-       ・楽曲名:
-       <br/>
-       ・オリジナル楽曲URL:
-       <br/>
-       ・キー変更:
-       <br/>
-       ・BPM:
-       <br/>
-       ・長さ:（フルコーラスorワンコーラス）
-       <br/>
-       ・トラック数:
-       <br/>
-       ・使用インターフェース名/マイク名：
-       <br/>
-       ・エンコード(有料): （有or無）
-       <br/>
-       ・お支払方法：（銀行振込、PayPay）
-       <br/>
-       ・納品は２～３週間前後になります。
-       <br/>
-       ・Mixに関するご要望:
-       <br/>
-      </br>
-     </p>
-    </div>
-    <p style="color: var(--text-light); font-size: 0.95rem;">
-     やり取りはすべて丁寧かつ迅速に対応。ご希望や不安点も、DMでお気軽にご相談いただけます。
+<section>
+  <div class="workflow-step">
+    <span>★</span>
+    <p>
+      ご依頼の際は、以下の内容をご記入の上、<br>
+      録音データとともにXのDMまたはメールでお送りください☺️<br>
+      ※ご不明な項目は空欄でも大丈夫です。お気軽にどうぞ🕊
+      <br><br>
+
+      ・🎵 楽曲タイトル：<br>
+      ・🔗 原曲のURL（YouTube等）：<br>
+      ・📁 歌唱データのURL（ギガファイル便・Google Driveなど）：<br>
+      ・🔑 キー変更のご希望（例：+2、-3、なし）：<br>
+      ・🕒 BPM（テンポ）：<br>
+      ・🎧 曲の長さ：フルコーラス / ワンコーラス<br>
+      ・🎚️ トラック数（ボーカルパート数やコーラスの有無も含めて）：<br>
+      ・🎙️ 使用機材（インターフェース名 / マイク名）：<br>
+      ・📦 動画エンコード希望（有料）：有 / 無<br>
+      ・💰 お支払い方法：銀行振込 / PayPay<br>
+      ・⏳ 納期目安：ご提出後、2〜3週間前後（お急ぎの場合はご相談ください）<br>
+      ・✍️ MIXについてのご要望：（声の雰囲気・参考音源などがあれば）<br>
+      ・📣 SNSへの掲載可否（実績紹介）：<br>
+　　　[ ] OK（クレジットあり）／[ ] OK（クレジットなし）／[ ] NG（非公開希望）<br>
+      ・🔐 録音時の注意点（ポップノイズなど）確認済みですか？<br>
+　　　はい / いいえ / よくわからない<br>
+      ・🗃️ データの保管について：<br>
+　　　納品後【30日間】保管いたします。<br>
+　　　これはリテイク対応や万が一の再送に備えた一時的な保管です。<br>
+　　　30日以降の保管をご希望の場合は、その旨ご記入ください。<br>
+　　　※大切なデータですので、納品後はご自身でも必ずバックアップをお願いいたします。
     </p>
-   </div>
-  </section>
-  <section id="faq">
+  </div>
+
+  <p style="color: var(--text-light); font-size: 0.95rem;">
+    やり取りはすべて丁寧かつ迅速に対応いたします。<br>
+    ご希望やご不安な点がありましたら、DMにてお気軽にご相談ください☺️
+  </p>
+</section>
+
+<section id="faq">
    <h2 class="section-title">
     よくある質問
    </h2>
@@ -777,34 +747,43 @@ footer{text-align:center;padding:42px 0;color:var(--text-light);font-size:.85rem
     Ryuzan Mix Salonは「はじめてのMIX依頼でも安心」を大切に、やさしく丁寧なサポートを心がけています。
    </p>
   </section>
-  <section id="contact">
-   <h2 class="section-title">
-    Contact
-   </h2>
-   <div class="contact">
-    <p>
-     X（DM）：
-     <a href="https://x.com/ryuzanmix" target="_blank">
-      @ryuzanmix
-     </a>
-    </p>
-    <p>
-     E-mail：
-     <a href="mailto:ryuzan.mix@gmail.com">
-      ryuzan.mix@gmail.com
-     </a>
-    </p>
+<section id="contact">
+  <h2 class="section-title">ご相談はこちらから☺️</h2>
+
+  <div class="contact">
+    <p>「ちょっと聞いてみたいな…」という方も、お気軽にご連絡ください🕊<br>
+    ご希望の方法をお選びいただけます。</p>
+
+    <!-- 🌸 やさしいオプション補足 -->
+    <p>「録音に不安がある…」「まだ依頼じゃないけど話を聞いてみたい」なども大歓迎です🌸<br>
+    無理な勧誘などは一切ありませんので、安心してどうぞ。</p>
+
+    <!-- 💌 メール -->
+    <button class="cta" onclick="window.open('mailto:ryuzan.mix@gmail.com?subject=MIX依頼のご相談&body=こんにちは、竜山つむぎさんへMIXの件でご連絡です。','_self')">
+      💌 メールで相談する（ryuzan.mix@gmail.com）
+    </button>
+
+    <!-- 💬 X -->
     <button class="cta" onclick="window.open('https://x.com/ryuzanmix','_blank')">
-     XのDMで相談する
+      🕊 XのDMで相談する（@ryuzanmix）
     </button>
+
+    <!-- 📋 Googleフォーム -->
+    <button class="cta" onclick="window.open('https://forms.gle/kko1grBVSAXcypLF8','_blank')">
+      📋 フォームで依頼内容を送る（Googleフォーム）
+    </button>
+
+    <!-- 🛒 coconala -->
     <button class="cta" onclick="window.open('https://coconala.com/services/2323053','_blank')">
-     coconalaで相談する
+      🛒 coconalaで依頼する
     </button>
+
+    <!-- 🎨 SKIMA -->
     <button class="cta" onclick="window.open('https://skima.jp/item/detail?item_id=239311','_blank')">
-     SKIMAで相談する
+      🎨 SKIMAで依頼する
     </button>
-   </div>
-  </section>
+  </div>
+</section>
   <footer>
    <p>
     お問い合わせ：
