--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>【歌ってみたMIX専門】Ryuzan Mix Salon｜VTuber・歌い手さん向け高品質MIX</title>
-  <meta content="録音ミス・音痴・初心者も大歓迎！"やさしい歌声トリートメント"で、安心して依頼できるMIX＆エンコード専門サロンです。50曲以上の実績、明確な料金体系、24時間以内の返信対応。" name="description"/>
+  <meta content="録音ミス・音痴・初心者も大歓迎！"やさしい歌声トリートメント"で、安心して依頼できるMIX＆エンコード専門サロンです。明確な料金体系、24時間以内の返信対応。" name="description"/>
   <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様,歌唱指導,ピッチ補正,マスタリング" name="keywords">
   
   <!-- ファビコン -->
@@ -107,7 +107,7 @@
       <div class="hero-illust">
         <div class="playlist-section" id="playlist">
           <h2 class="section-title">歌ってみたMIXの実績・サンプル音源集</h2>
-          <p class="playlist-subtitle">50曲以上の仕上がりをYouTubeで公開中！</p>
+          <p class="playlist-subtitle">仕上がりをYouTubeで公開中！</p>
           
           <a href="https://www.youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" 
              class="playlist-button" target="_blank" rel="noopener">
@@ -136,10 +136,6 @@
   <!-- 統計セクション -->
   <section>
     <div class="stats">
-      <div class="stat-item">
-        <span class="stat-number">50+</span>
-        <div class="stat-label">MIX実績楽曲数</div>
-      </div>
       <div class="stat-item">
         <span class="stat-number">24時間</span>
         <div class="stat-label">以内のDM返信</div>
@@ -183,7 +179,7 @@
           活動実績と対応範囲
         </h3>
         <p>
-          <strong>歌ってみたMIX:</strong> 50曲以上（ボカロ・J-POP中心）<br>
+          <strong>歌ってみたMIX:</strong> ボカロ・J-POP中心<br>
           <strong>SNSアカウント:</strong> <a href="https://x.com/ryuzanmix" target="_blank">@ryuzanmix</a><br>
           <strong>対応レベル:</strong> 初心者〜上級者・オーディション提出音源まで<br>
           <strong>特殊対応:</strong> ライブ音源補正、デュエット・コラボ、仮歌制作<br>
@@ -222,7 +218,7 @@
           <i class="fas fa-music" style="color: #3498db;"></i>
           豊富な実績とサンプル
         </h3>
-        <p>50曲超のサンプルをプレイリストで公開。仕上がりを耳で確認できるから安心。様々なジャンル・声質に対応した実績をご覧いただけます。</p>
+        <p>サンプルをプレイリストで公開。仕上がりを耳で確認できるから安心。様々なジャンル・声質に対応した実績をご覧いただけます。</p>
       </article>
 
       <article class="card">
